--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@google-cloud/local-auth": "^3.0.1",
+    "@supabase/supabase-js": "^2.57.0",
     "google-auth-library": "^10.3.0",
     "googleapis": "^159.0.0",
     "lucide-react": "^0.344.0",
